<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal_200"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="89dp"
        android:layout_height="88dp"
        android:contentDescription="@string/image_description"
        android:src="@mipmap/app_icon" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_question"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:padding="11dp"
        android:text="@string/question_declaration"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="34dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/TrueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/true_text"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/FalseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_text"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer"
        android:textSize="24sp"
        android:text=""
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous_text"
            android:src="@mipmap/previous"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/teal_200"/>
    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_text"
        android:src="@mipmap/next"
        android:layout_marginLeft="30dp"
        android:backgroundTint="@color/teal_200"/>
    </LinearLayout>
</LinearLayout>